--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,10 @@ research/annotations
 research/images
 research/*.record*
 research/protobuf.zip
+
+# models
+edge/human_pose/models
+
+# images
+edge/semantic_segmentation/images
+edge/semantic_segmentation/results
