Menu scene ui work

--- a/unity/Assembly-CSharp.csproj
+++ b/unity/Assembly-CSharp.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Assets\PoseNet\PoseNet.cs" />
     <Compile Include="Assets\Common\DisposeUtil.cs" />
     <Compile Include="Assets\Common\TextureResizer.cs" />
+    <Compile Include="Assets\Scripts\MenuSceneController.cs" />
     <None Include="Assets\Resources\Resize.shader" />
     <None Include="Assets\Resources\LineShader.shader" />
     <None Include="Assets\Resources\TextureToTensor.compute" />
