--- a/unity/Assembly-CSharp.csproj
+++ b/unity/Assembly-CSharp.csproj
@@ -82,7 +82,10 @@
     <Compile Include="Assets\PoseNet\SquatController.cs" />
     <Compile Include="Assets\Scripts\Calendar\CalendarController.cs" />
     <Compile Include="Assets\Scripts\Calendar\CalendarDay.cs" />
+    <Compile Include="Assets\Scripts\Controllers\JumpingSquatController.cs" />
     <Compile Include="Assets\Scripts\MenuSceneController.cs" />
+    <Compile Include="Assets\Scripts\Utils\Singleton.cs" />
+    <Compile Include="Assets\Scripts\View\ExcerciseItemUI.cs" />
     <None Include="Assets\Resources\Resize.shader" />
     <None Include="Assets\Resources\LineShader.shader" />
     <None Include="Assets\Resources\TextureToTensor.compute" />
