--- a/unity/Assembly-CSharp.csproj
+++ b/unity/Assembly-CSharp.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Assets\PoseNet\SquatController.cs" />
     <Compile Include="Assets\Scripts\Calendar\CalendarController.cs" />
     <Compile Include="Assets\Scripts\Calendar\CalendarDay.cs" />
+    <Compile Include="Assets\Scripts\Controllers\DatabaseController.cs" />
     <Compile Include="Assets\Scripts\Controllers\JumpingSquatController.cs" />
     <Compile Include="Assets\Scripts\MenuSceneController.cs" />
     <Compile Include="Assets\Scripts\Utils\Singleton.cs" />
@@ -265,6 +266,12 @@
     </Reference>
     <Reference Include="UnityEditor">
       <HintPath>/Applications/Unity/Hub/Editor/2019.4.5f1/Unity.app/Contents/Managed/UnityEditor.dll</HintPath>
+    </Reference>
+    <Reference Include="Mono.Data">
+      <HintPath>/Users/seunghun/Documents/Projects/tensorflow-edge/unity/Assets/Plugins/Mono.Data.dll</HintPath>
+    </Reference>
+    <Reference Include="Mono.Data.Sqlite">
+      <HintPath>/Users/seunghun/Documents/Projects/tensorflow-edge/unity/Assets/Plugins/Mono.Data.Sqlite.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.iOS.Extensions.Xcode">
       <HintPath>/Applications/Unity/Hub/Editor/2019.4.5f1/PlaybackEngines/iOSSupport/UnityEditor.iOS.Extensions.Xcode.dll</HintPath>
